packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Arbitration_Location__c.field-meta.xml
<CustomField>
    <fullName>Arbitration_Location__c</fullName>
    <label>Arbitration Location</label>
    <type>TextArea</type>
</CustomField>