packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Assignment_Clause_Present__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Clause_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment Clause Present</label>
    <type>Checkbox</type>
</CustomField>