packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Audit_Rights__c.field-meta.xml
<CustomField>
    <fullName>Audit_Rights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Rights</label>
    <type>Checkbox</type>
</CustomField>