packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <label>Billing Frequency</label>
    <type>TextArea</type>
</CustomField>