packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Compliance_Standards_Mentioned__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Standards_Mentioned__c</fullName>
    <label>Compliance Standards Mentioned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>