packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Confidentiality_Clause__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Clause__c</fullName>
    <label>Confidentiality Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>