packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Confidentiality_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Term_Length__c</fullName>
    <label>Confidentiality Term Length</label>
    <type>TextArea</type>
</CustomField>