packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Customer_Data_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Customer_Data_Ownership__c</fullName>
    <label>Customer Data Ownership</label>
    <type>TextArea</type>
</CustomField>