packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Data_Export_Rights__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Rights__c</fullName>
    <label>Data Export Rights</label>
    <type>TextArea</type>
</CustomField>