packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Data_Storage_Limits__c.field-meta.xml
<CustomField>
    <fullName>Data_Storage_Limits__c</fullName>
    <label>Data Storage Limits</label>
    <type>TextArea</type>
</CustomField>