packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Date_Extracted_Processed__c.field-meta.xml
<CustomField>
    <fullName>Date_Extracted_Processed__c</fullName>
    <label>Date Extracted/Processed</label>
    <type>Date</type>
</CustomField>