packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Deliverable_List__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_List__c</fullName>
    <label>Deliverable List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>