packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Discount_Promotional_Terms__c.field-meta.xml
<CustomField>
    <fullName>Discount_Promotional_Terms__c</fullName>
    <label>Discount/Promotional Terms</label>
    <type>TextArea</type>
</CustomField>