packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Dispute_Resolution_Mechanism_Long__c.field-meta.xml
<CustomField>
    <fullName>Dispute_Resolution_Mechanism_Long__c</fullName>
    <label>Dispute Resolution Mechanism</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>