packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Early_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Clause__c</fullName>
    <label>Early Termination Clause</label>
    <type>TextArea</type>
</CustomField>