packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Early_Termination_Clause_Long__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Clause_Long__c</fullName>
    <label>Early Termination Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>