packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Force_Majeure_Clause_Present__c.field-meta.xml
<CustomField>
    <fullName>Force_Majeure_Clause_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Majeure Clause Present</label>
    <type>Checkbox</type>
</CustomField>