packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <label>Governing Law</label>
    <type>TextArea</type>
</CustomField>