packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Indemnification_Clause_Present__c.field-meta.xml
<CustomField>
    <fullName>Indemnification_Clause_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indemnification Clause Present</label>
    <type>Checkbox</type>
</CustomField>