packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Intellectual_Property_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property_Ownership__c</fullName>
    <label>Intellectual Property Ownership</label>
    <type>TextArea</type>
</CustomField>