packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Intellectual_Property_Ownership_Long__c.field-meta.xml
<CustomField>
    <fullName>Intellectual_Property_Ownership_Long__c</fullName>
    <label>Intellectual Property Ownership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>