packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <type>TextArea</type>
</CustomField>