packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Last_Modified_Date_Document__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Date_Document__c</fullName>
    <label>Last Modified Date (Document)</label>
    <type>Date</type>
</CustomField>