packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Late_Payment_Penalities_Long__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Penalities_Long__c</fullName>
    <label>Late Payment Penalties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>