packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Late_Payment_Penalties__c.field-meta.xml
<CustomField>
    <fullName>Late_Payment_Penalties__c</fullName>
    <label>Late Payment Penalties</label>
    <type>TextArea</type>
</CustomField>