packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Limitation_of_Liability_Present__c.field-meta.xml
<CustomField>
    <fullName>Limitation_of_Liability_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limitation of Liability Present</label>
    <type>Checkbox</type>
</CustomField>