packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Products_Sold__c.field-meta.xml
<CustomField>
    <fullName>Products_Sold__c</fullName>
    <label>Products Sold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>