packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Referral_Clause_Present__c.field-meta.xml
<CustomField>
    <fullName>Referral_Clause_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Clause Present</label>
    <type>Checkbox</type>
</CustomField>