packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Renewal_Increase_Cap__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Increase_Cap__c</fullName>
    <label>Renewal Increase Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>