packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Site_Access_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Site_Access_Requirements__c</fullName>
    <label>Site Access Requirements</label>
    <type>TextArea</type>
</CustomField>