packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/SLA_Penalties_Credits__c.field-meta.xml
<CustomField>
    <fullName>SLA_Penalties_Credits__c</fullName>
    <label>SLA Penalties/Credits</label>
    <type>TextArea</type>
</CustomField>