packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/SLA_Reporting_Frequency__c.field-meta.xml
<CustomField>
    <fullName>SLA_Reporting_Frequency__c</fullName>
    <label>SLA Reporting Frequency</label>
    <type>TextArea</type>
</CustomField>