packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/SOW_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_End_Date__c</fullName>
    <label>SOW End Date</label>
    <type>Date</type>
</CustomField>