packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Subscription_Product__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product__c</fullName>
    <label>Subscription Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>