packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Support_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact_Method__c</fullName>
    <label>Support Contact Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>