packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Support_Included__c.field-meta.xml
<CustomField>
    <fullName>Support_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Included</label>
    <type>Checkbox</type>
</CustomField>