packages/ennube-salesforce/force-app/main/default/objects/Contract/fields/Third_Party_Vendors_Partners_Involved__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Vendors_Partners_Involved__c</fullName>
    <label>Third-Party Vendors/Partners Involved</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>